[package]
name = "valence-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0.144", features = ["derive"] }

[dependencies.valence]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "nbt_bridge"
path = "fuzz_targets/nbt_bridge.rs"
test = false
doc = false
